<package>
  <name>mav_system_msgs</name>
  <version>0.0.1</version>
  <description>Messages specific to MAV utils scripts.</description>

  <maintainer email="giuseppe.silano@unisannio.it">Giuseppe Silano</maintainer>

  <author>Christian Lanegger</author>
  <author>Ria Sonecha</author>
  <author>Giuseppe Silano</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/GRACE-GROUP/mav_comm</url>
  <url type="bugtracker">https://github.com/GRACE-GROUP/mav_comm/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
